<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/conversa_bg_rounded_corner_white"
    android:paddingHorizontal="20dp"
    android:paddingBottom="20dp"
    android:theme="@style/Theme.Conversa">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/delete_template_title_txt"
        android:textColor="@color/black2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/grey3"
        android:text="@string/cancel_txt"
        android:textAllCaps="false"
        android:textColor="#A3A3A3"
        app:layout_constraintEnd_toStartOf="@id/yesBtn"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/yesBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/yes_txt"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintStart_toEndOf="@id/cancelBtn"
        app:layout_constraintTop_toTopOf="@id/cancelBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>