<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Conversa">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editRoom"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"

        android:hint="@string/edit_room_hint"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/light_message_button_fg"
        app:layout_constraintBottom_toTopOf="@id/btnChatInfo"
        app:layout_constraintEnd_toStartOf="@id/btnJoinRoom"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_input_color" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/btnJoinRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_join_text"
        app:layout_constraintBottom_toBottomOf="@+id/editRoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editRoom"
        app:layout_constraintTop_toTopOf="@+id/editRoom" />

    <Button
        android:id="@+id/btnChatInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_chat_info_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editRoom"
        app:layout_constraintTop_toBottomOf="@+id/editRoom" />


</androidx.constraintlayout.widget.ConstraintLayout>