<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/conversa_bg_rounded_corner_white"
    android:paddingHorizontal="20dp"
    android:paddingBottom="20dp"
    android:theme="@style/Theme.Conversa">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/new_message_template_title"
        android:textColor="@color/black2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/messageTemplateText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"


        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/light_message_button_fg"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/messageTemplateTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey2"
            android:hint="@string/type_here_hint"
            android:textColor="@color/text_input_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lengthLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/messageTemplateText"
        app:layout_constraintTop_toBottomOf="@+id/messageTemplateText"
        tools:text="140" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/grey3"
        android:text="@string/cancel_txt"
        android:textAllCaps="false"
        android:textColor="#A3A3A3"
        app:layout_constraintEnd_toStartOf="@id/addBtn"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/messageTemplateText"
        app:layout_constraintTop_toBottomOf="@id/lengthLeft" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_txt"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/messageTemplateText"
        app:layout_constraintStart_toEndOf="@id/cancelBtn"
        app:layout_constraintTop_toTopOf="@id/cancelBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>